# price-prediction

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
api/: app.py  main.py
app/: streamlit_app.py  streamlit_app.py.bak
configs/: settings.example.toml
docs/: data_dictionary.md  erd.md
ge/: create_suite.py
reports/tables/: missingness.csv  numeric_summary.csv
sql/: init_postgres.sql
src/ebay_price/: config.py
src/ebay_price/api/: schemas.py
src/ebay_price/eval/: eda_report.py
src/ebay_price/explain/: cli.py  explainers.py
src/ebay_price/features/: align.py  build_features.py  categorical.py  datetime.py  inference.py  numeric.py  text.py
src/ebay_price/flows/: deploy.py
src/ebay_price/ingest/: cli.py  ebay_client.py  flow.py  ingest_cli.py  load.py  normalize.py  schema.py  sources.py  writer.py
src/ebay_price/modeling/: datasets.py  loaders.py  log_to_mlflow.py  metrics.py  mlflow_utils.py  train_baselines.py
src/ebay_price/utils/: paths.py  settings.py
src/ebay_price/validation/: flow.py  ge_checks.py  run_validation.py  schemas.py  validators.py
tests/: conftest.py  test_api_endpoints.py  test_features_smoke.py  test_inference_defaults.py  test_modeling_smoke.py
warehouse/: ddl.sql
