[tool.poetry]
name = "price-prediction"
version = "0.1.0"
description = "eBay price prediction and sell-through probability"
authors = ["Lachlan Black"]
license = "MIT"
readme = "README.md"
# Point Poetry at your src/ebay_price package
packages = [{ include = "ebay_price", from = "src" }]

[tool.poetry.dependencies]
# Use the Python you actually have active (3.12 is fine with spaCy)
python = "^3.12"
pandas = "*"
polars = "*"
pyarrow = "*"
numpy = "*"
duckdb = "*"
sqlalchemy = "*"
psycopg = {extras = ["binary"], version = "^3.2.12"}
python-dotenv = "*"
pydantic = "*"
pydantic-settings = "*"
scikit-learn = "*"
lightgbm = "*"
xgboost = "*"
catboost = "*"
statsmodels = "*"
matplotlib = "*"
seaborn = "*"
mlflow = "*"
prefect = "*"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
streamlit = "*"
great-expectations = "*"
sentence-transformers = "*"
spacy = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
types-requests = "*"
types-PyYAML = "*"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E","F","I","UP","B","SIM"]
ignore = ["E203"]
src = ["src","api","app","tests"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = "src,api,app"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1 --cov=src --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
